--- a/style.css
+++ b/style.css
@@ -9,10 +9,32 @@ body {
 
 .container {
   width: 90%;
-  max-width: 1000px;
+  max-width: 1500px;
   margin: auto;
   padding: 20px;
 }
+
+.header {
+  /* display: flex; */
+}
+
+.logo {
+  margin: 0 10px 0 20px;
+}
+
+.services {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.price-tile {
+background-color: #e2f1ff;
+width: 400px;
+padding: 0 5px 0 5px;
+margin: 5px;
+}
+
 
 header {
   background-color: #003366;
