--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .container {
   width: 90%;
   max-width: 1500px;
-  margin: auto;
+  margin: 0 5% 0 5%;
   padding: 20px;
 }
 
@@ -21,12 +21,19 @@ body {
 .logo {
   margin: 0 10px 0 20px;
   max-width: 50vw;
+
 }
 
-.services {
+.tiles {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+}
+
+.headshot {
+  width: 35vw;
+  border-radius: 100%;
+  max-width: 250px;
 }
 
 .price-tile {
@@ -34,6 +41,21 @@ background-color: #e2f1ff;
 width: 400px;
 padding: 0 5px 0 5px;
 margin: 5px;
+}
+
+.team-tile {
+  text-align: center;
+  width: 400px;
+  margin: 5px;
+  padding: 10px;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.italic {
+  font-style: italic;
 }
 
 
@@ -80,6 +102,8 @@ ul li {
 form {
   display: flex;
   flex-direction: column;
+  max-width: 1250px
+  ;
 }
 
 input, textarea {
